--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,9 @@
 PORT=5000
-DB_USER=your_db_user
+DB_USER=postgres
 DB_HOST=localhost
-DB_NAME=your_db_name
-DB_PASSWORD=your_db_password
+DB_NAME=cimtcp
+DB_PASSWORD=postgres
 DB_PORT=5432
-JWT_SECRET=your_jwt_secret_key
+JWT_SECRET=your_jwt_secret_key_here
+JWT_EXPIRES_IN=1d
+UPLOADS_FOLDER=./uploads
